--- a/index.html
+++ b/index.html
@@ -1,23 +1,71 @@
 <!DOCTYPE html>
+<html lang="en">
 
- <html lang="en">
-
- <head>
+<head>
     <meta charset="UTF-8">
-    <title>TomOB's Document</title>
- </head>
+    <title>MY Resume</title>
+</head>
 
- <body>
-    <h1>TomOB's PORFOLIO</h1>
-    <h2>I'm a Web Developer</h2>
+<body>
+    <h1>Thomas Sai</h1>
+    <img src="./IMG_E1712-removebg-preview.png" height="100" alt="profile picture of Thomas Sai">
+
+    <h2>Summary</h2>
+    <p>This is my first capstone project on my journey to become a Web developer and i am dedicated to finish this udemy course.</p>
     <hr>
-    <h3><a href="./public/movie-ranking.html"> MOVIE RANKING PROJECT </a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="MOVIE RANKINg" >
-    <h3><a href="./public/birthday-invite.html"> BIETHDAY INVITE </a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt=" PUPLE BIRTHDAY CAKE" >
+
+    <h2>Education</h2>
+    <ul>
+        <li>Automobile Engineering - Koforidua Technical Institute.(2017-2019)</li>
+    </ul>
     <hr>
-    <a href="./public/about.html"> ABOUT ME </a>
-    <a href="./public/contact.html"> CONTACT ME </a>
+
+    <h2>Work Experience</h2>
+    <ul>
+        <li><h3>Automobile Engineering Attachment - Ghana Armed Forces.</h3>
+            <p>(2019-2020)</p>
+            <ul>
+                <li>Changing Tyres</li>
+                <li>Changing Breaks</li>
+                <li>Changing Oil</li>
+            </ul>
+        </li>
+        
+        <li><h3>Forex Trader</h3>
+            <p>(2020-2024)</p>
+            <ul>
+                <li>Buying and Selling of Currencys (GBPUSD)...</li>
+                <li>Buying and Selling of Crypto Currencys (BITCOIN)...</li>
+            </ul>
+        </li>
+    </ul>
+    <hr>
+
+    <h2>Skills</h2>  
+    <ul>
+        <li>Analyse the Financial Market</li>
+        <li>Risk Taker</li>
+        <li>Good Story Teller</li>
+    </ul>    
+    <hr>
+    <h2>Awards and Certifications</h2>
+    <ul>
+        <li>Funded Prop Firm Trader - My Forex Funds. (2022-08-08)</li>
+        <li>Funded Prop Firm Trade - Express Funded.</li>
+        <li>Funded Prop Firm Trade - Funded Next.</li>
+    </ul>
+    <hr>
+
+    <h2>Others</h2>
+    <ul>
+        <li><a href="./hobbies.html"> My Hobbies</a></li>
+        <li><a href="./contact.html"> Contact Me</a></li>
+    </ul>
+
+    <footer>
+        <p>© Thomas Sai.All rights reserved.</p>
+    </footer>
+    
 </body>
 
- </html>
+</html>
